// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Remirror Controlled Component can override updates to the editor state 1`] = `
<div
  aria-label="Remirror editor"
  aria-multiline="true"
  aria-placeholder=""
  autofocus="false"
  class="ProseMirror remirror-editor"
  contenteditable="true"
  role="textbox"
>
  <p>
    Hello
  </p>
  <p>
    add more value some content
  </p>
</div>
`;

exports[`Remirror Controlled Component overrides initial content 1`] = `
<div
  aria-label="Remirror editor"
  aria-multiline="true"
  aria-placeholder=""
  autofocus="false"
  class="ProseMirror remirror-editor"
  contenteditable="true"
  role="textbox"
>
  <p>
    Not terrible
  </p>
</div>
`;

exports[`Remirror Controlled Component responds to updates to the editor state 1`] = `
<div
  aria-label="Remirror editor"
  aria-multiline="true"
  aria-placeholder=""
  autofocus="false"
  class="ProseMirror remirror-editor"
  contenteditable="true"
  role="textbox"
>
  <p>
    add more value some content
  </p>
</div>
`;

exports[`Remirror Controlled Component should set the initial value 1`] = `
<div
  aria-label="Remirror editor"
  aria-multiline="true"
  aria-placeholder=""
  autofocus="false"
  class="ProseMirror remirror-editor"
  contenteditable="true"
  role="textbox"
>
  <p>
    This is the initial value
  </p>
</div>
`;

exports[`Remirror Controlled Component throws when using  \`setContent\` updates 1`] = `
"There is a problem with your controlled editor setup.

Controlled editors do not support \`clearContent\` or \`setContent\` where \`triggerChange\` is \`true\`. Update the \`value\` prop instead.

For more information visit https://docs.remirror.org/errors#RMR0202"
`;

exports[`Remirror Controlled Component throws when using  \`setContent\` updates 2`] = `
"There is a problem with your controlled editor setup.

Controlled editors do not support \`clearContent\` or \`setContent\` where \`triggerChange\` is \`true\`. Update the \`value\` prop instead.

For more information visit https://docs.remirror.org/errors#RMR0202"
`;
